--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -6,15 +6,16 @@
 
 
 <body>
+<section id="hotel_list">
 <div class="container w-100  pb-3 mt-5 mb-5 " layout:fragment="content">
 
 <!--        text-center-->
-        <div class="row justify-content-start ">
+        <div class="row d-flex justify-content-start align-items-center p-5 " >
 
-            <div class="col col-md-2 border rounded-3  bg-opacity-5 p-0 m-2"  th:each="list, i : ${list}">
+            <div class="col col-md-2 border rounded-3  p-0 mx-3 mb-5"  th:each="list, i : ${list}">
                 <div class="hotel_list_img position-relative">
-                <a th:href="|@{/room/list/} + ${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3 w-100"
-                    id="list_img" th:id="${list.htId}" width="200px" height="200px" style="background-size: cover"></a>
+                <a th:href="|@{/room/list/} + ${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3"
+                    id="list_img" th:id="${list.htId}" width="202px" height="210px" style="background-size: cover; background-position: center"></a>
                 </div>
                 <div class="hotel_list_info mt-2 p-1">
                 <p class="m-0 "><span class="resId fs-6 text-secondary" th:text="${list.htAddress}"></span></p>
@@ -28,5 +29,6 @@
         </div>
 
 </div>
+</section>
 </body>
 </html>
