--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -9,7 +9,9 @@
 
 <body>
 <header th:replace="fragments/header::headerFragment"></header>
-<div th:layout:fragment="content"></div>
-<footer th:replace="fragments/footer::footerFragment"></footer>
+<div th:layout:fragment="content">
+    <footer th:replace="fragments/footer::footerFragment"></footer>
+</div>
+
 </body>
 </html>
