--- a/src/main/resources/templates/reserved.html
+++ b/src/main/resources/templates/reserved.html
@@ -19,7 +19,7 @@
 
             <div class="row">
                 <h1 class="fw-bold p-2 m-2 ">예약내역페이지</h1>
-                <tr th:each="r : ${reservation}">
+                <div th:each="r : ${reservation}">
 
                     <div class="col-lg-4 col-md-5 pt-3 pt-sm-4 w-100">
 
@@ -44,7 +44,7 @@
 
                         </div>
                     </div>
-                </tr>
+                </div>
             </div>
         </div>
     </div>
