0213 [modify] admin page

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -91,7 +91,7 @@
 <!--                    d-flex justify-content-center  item-align-center text-align-center-->
                     <input type="text" class="" hidden="hidden" name="rId" th:value="${rlist.rId}">
                     <td th:name="hotelHtId" th:text="${rlist.htName} + ' 호텔'"></td>
-                    <td><img   th:src="${rlist.rImg}" width="500px" height="200px" class="oriImg"></td>
+                    <td><img th:src="${rlist.rImg}" width="500px" height="220px" class="oriImg mx-auto d-block" ></td>
                     <td  th:name="rName" th:text="${rlist.rName}"></td>
                     <td  th:name="rPrice" th:text="${rlist.rPrice}"></td>
                     <td  th:name="rCnt" th:text="${rlist.rCnt}"></td>
