--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,14 +45,8 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
-                        <a href="#intoduceTeam" class="nav-link">
-                            팀원소개
-                        </a>
-                    </li>
-
                     <li class="nav-item" th:if="${'admin@jspo.com'.equals(session.email)}">
-                        <a href="/admin" class="nav-link">
+                        <a href="/admin/hotellist" class="nav-link">
                             관리자
                         </a>
                     </li>
