--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,7 +34,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="/join" class="nav-link">
+                        <a href="/join" class="nav-link" th:if="${session.email == null}">
                             회원가입
                         </a>
                     </li>
