--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -13,7 +13,7 @@
 
             <div class="col col-md-2 border rounded-3  bg-opacity-5 p-0 m-2"  th:each="list, i : ${list}">
                 <div class="hotel_list_img position-relative">
-                <a th:href="|@{/room/list/} + ${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3 w-100"
+                <a th:href="|@{/room/list/}${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3 w-100"
                     id="list_img" th:id="${list.htId}" width="200px" height="200px" style="background-size: cover"></a>
                 </div>
                 <div class="hotel_list_info mt-2 p-1">
