--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/footer.css">
         <div class="footer_wrapper">
         <div class="footer__container">
-                    Footer
+                    Footer222
         </div>
         </div>
     </footer>
