--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -7,7 +7,7 @@
 
 <body>
 <section id="hotel_list">
-<div class="container w-100  pb-3 mt-5 mb-5 " layout:fragment="content">
+<div class="container " layout:fragment="content">
 
 <!--        text-center-->
         <div class="row d-flex justify-content-start align-items-center p-5 " >
