--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container my-5 w-100 h-100" layout:fragment="content" >
+<div class="container " layout:fragment="content" >
     <div id="map" style="height:400px;"></div>
 
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=19a3970bc47b62850b9beb6d57f0b6bc"></script>
@@ -163,12 +163,7 @@
             </div>
         </tr>
     </form>
-    <ul>
-        <li>최소가격이 최대가격보다 작게
-            최대가격이 최소가격보다 크게
-        </li>
-        <li>인풋박스에 가격 입력시 레인지값 이동</li>
-    </ul>
+
 
 
 </div>
