--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -9,9 +9,8 @@
 
 <body>
 <header th:replace="fragments/header::headerFragment"></header>
-<div th:layout:fragment="content">
-    <footer th:replace="fragments/footer::footerFragment"></footer>
-</div>
+<div th:layout:fragment="content"></div>
+<footer th:replace="fragments/footer::footerFragment"></footer>
 
 </body>
 </html>
