--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,20 +1,26 @@
 *{
    box-sizing: border-box;
 }
-html{
-    margin: 10px;
-    height: 100%
+
+.container{
+    height: 85vh;
+    margin-top: 2rem;
 }
-body{
-    width: 100%;
-    height: 100%;
-}
-.navbar{
-    width: 100%;
+
+header .navbar{
+    width: 100vw;
+    height: 10vh;
+    background-color: #6f2cf4;
+
     display: inline-block;
 }
 
-.navbar .header_container{
+header .navbar a{
+    color: white;
+    font-size: 1.2rem;
+}
+
+header .navbar .header_container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,12 +28,12 @@ body{
 }
 
 
-.navbar .header_container .collapse .navbar-nav li{
+header .navbar .header_container .collapse .navbar-nav li{
 
     margin-right: 20px;
 }
 
-.navbar .header_container .collapse .navbar-nav li:nth-child(5){
+header .navbar .header_container .collapse .navbar-nav li:nth-child(5){
     margin-right: 50px;
 }
 
