--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 
-<div class="container h-100 " layout:fragment="content">
+<div class="container" layout:fragment="content">
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary " >
+    <nav class="navbar navbar-expand-lg bg-body-tertiary my-2 " >
         <div class="container-fluid">
             <a class="navbar-brand" href="/admin/hotellist">관리자 홈</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
