--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,8 @@
 
 
     <!--    justify-content-between-->
-    <nav class="navbar navbar-expand-lg bg-light shadow-lg sticky-top ">
+    <header>
+    <nav class="navbar navbar-expand-lg shadow-lg sticky-top ">
         <div class="header_container"><a href="/" class="navbar-brand align-middle">
             <img id="header_logo" src="/imgs/logos/jspo-logo-final.png" alt="logo" height="110px">
         </a>
@@ -15,8 +16,8 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
 
                     <li class="nav-item">
                         <a href="/" class="nav-link">
@@ -54,7 +55,7 @@
             </div>
         </div>
     </nav>
-
+    </header>
 </th:block>
 </body>
 
