--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,8 @@
 
 
 <body>
-
-<div class="login_wrap justify-content-center" layout:fragment="content">
+<div class="container"  layout:fragment="content">
+<div class="login_wrap justify-content-center">
     <div class="login">
 
         <div class="logo">
@@ -57,9 +57,8 @@
         </form>
     </div>
 
-
 </div>
-
+</div>
 </body>
 
 </html>
