0214 [modify] footer & logo

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -41,6 +41,7 @@
             <link rel="stylesheet" href="/css/hotelReg.css">
             <link rel="stylesheet" href="/css/reservation.css">
             <link rel="stylesheet" href="/css/reserved.css">
+            <link rel="stylesheet" href="/css/footer.css">
 
 
 
