--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
     <header>
     <nav class="navbar navbar-expand-lg shadow-lg sticky-top ">
         <div class="header_container"><a href="/" class="navbar-brand align-middle">
-            <img id="header_logo" src="/imgs/logos/jspo-logo-final.png" alt="logo" height="110px">
+            <img id="header_logo" src="/imgs/logos/jspo-logo-white3.png" alt="logo"  >
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
