--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -55,42 +55,39 @@
             </div>
         </div>
 
-          <table>
-            <tr th:each="list ,i : ${list}">
-                <div class="card mb-3 hotel_list mt-4">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <a th:href="@{/room/list/} + ${list.htId}"> <img th:src="${list.htImg}"
-                            class="img-fluid rounded-start" alt="..."
-                            width="100%" height="100%"></a>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h2 class="card-title fw-bolder" th:text="${list.htName}"></h2>
-                                <p class="card-text" th:text="${list.htAddress}"></p>
-                                <div class="hotel_list_price">
-                                    <span class="display-4 fw-bolder">가격</span>
-                                    <td th:if="${pricelist[i.index]} != null"><span class="fw-bolder display-4"
-                                                                                    th:text="${pricelist[i.index]}"></span><span
-                                            class="fw-bolder display-4">원</span></td>
-                                    <td th:if="${pricelist[i.index]} == null"><span class="fw-bolder display-4"
-                                                                                    th:text="0"></span><span
-                                            class="fw-bolder display-4">원</span></td>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </tr>
-          </table>
-
-
+<!--          <table>-->
+<!--            <tr th:each="list ,i : ${list}">-->
+<!--                <div class="card mb-3 hotel_list mt-4">-->
+<!--                    <div class="row g-0">-->
+<!--                        <div class="col-md-4">-->
+<!--                            <a th:href="@{/room/list/} + ${list.htId}"> <img th:src="${list.htImg}"-->
+<!--                            class="img-fluid rounded-start" alt="..."-->
+<!--                            width="100%" height="100%"></a>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-8">-->
+<!--                            <div class="card-body">-->
+<!--                                <h2 class="card-title fw-bolder" th:text="${list.htName}"></h2>-->
+<!--                                <p class="card-text" th:text="${list.htAddress}"></p>-->
+<!--                                <div class="hotel_list_price">-->
+<!--                                    <span class="display-4 fw-bolder">가격</span>-->
+<!--                                    <td th:if="${pricelist[i.index]} != null"><span class="fw-bolder display-4"-->
+<!--                                                                                    th:text="${pricelist[i.index]}"></span><span-->
+<!--                                            class="fw-bolder display-4">원</span></td>-->
+<!--                                    <td th:if="${pricelist[i.index]} == null"><span class="fw-bolder display-4"-->
+<!--                                                                                    th:text="0"></span><span-->
+<!--                                            class="fw-bolder display-4">원</span></td>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </tr>-->
+<!--          </table>-->
 
     </div>
 
     </body>
 
     </html>
-
 
 
