0214 [add & modify] 호텔 등록뷰 수정 및 상세조건 부분 구현중

--- a/src/main/resources/static/css/hotelPage.css
+++ b/src/main/resources/static/css/hotelPage.css
@@ -12,20 +12,114 @@
 
 }
 
-.slider .price_wrap{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+/*.slider .price_wrap{*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*}*/
+
+/*.price_input_range{*/
+/*    width: 83%;*/
+/*}*/
+
+/*.price_input_group{*/
+/*    width: 14%;*/
+/*}*/
+/*.input-group input{*/
+/*    text-align: right;*/
+/*}*/
+
+/*                       */
+.middle {
+    position: relative;
+    width: 95%;
+
 }
 
-.price_input_range{
-    width: 83%;
+.slider {
+    position: relative;
+    z-index: 1;
+    height: 10px;
+    margin: 0 15px;
+}
+/* 점이 없는 공간의 색깔 */
+.slider > .track {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #c6aee7;
+}
+/* 범위 안에 색깔 */
+.slider > .range {
+    position: absolute;
+    z-index: 2;
+    left: 1%;
+    right: 1%;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #6200ee;
+}
+/*  점 색깔 */
+.slider > .thumb {
+    position: absolute;
+    z-index: 3;
+    width: 30px;
+    height: 30px;
+    background-color: #6200ee;
+    border-radius: 50%;
 }
 
-.price_input_group{
-    width: 14%;
+.slider > .thumb.left {
+    left: 1%;
+    transform: translate(-15px, -10px);
 }
-.input-group input{
+.slider > .thumb.right {
+    right: 1%;
+    transform: translate(15px, -10px);
+}
+
+input[type="range"] {
+    position: absolute;
+    /* opacity로 가린 것을 이벤트도 비활성화하기 위해 */
+    pointer-events: none;
+    -webkit-appearance: none;
+    z-index: 2;
+    height: 10px;
+    width: 100%;
+    opacity: 0;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    /* 겹쳐진 두 thumb를 모두 활성화 */
+    pointer-events: all;
+    width: 30px;
+    height: 30px;
+    border-radius: 0;
+    border: 0 none;
+    background-color: red;
+    cursor: pointer;
+    /* appearance를 해야 위의 스타일들을 볼 수 있음 */
+    -webkit-appearance: none;
+}
+
+.left {
+    width: 50%;
+    display: inline-block;
+    text-align: left;
+    padding-left: 6px;
+    padding-top: 15px;
+}
+
+.right {
+    width: 49%;
+    display: inline-block;
     text-align: right;
+    padding-top: 15px;
+    padding-right: 6px;
 }
