--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,20 +8,24 @@
 <head>
 <meta charset="UTF-8">
     <title>호텔 리스트</title>
+
+</head>
+<body>
+
+<div class="container h-100 " layout:fragment="content">
     <style>
         .oriImg {
-            width: 200px;
-            height: auto;
+            width: 300px;
+            height: 300px;
         }
 
         td {
             text-align: center;
         }
+        th {
+            text-align: center;
+        }
     </style>
-</head>
-<body>
-
-<div class="container h-100 " layout:fragment="content">
 <header>
     <h1> ADMIN 게시판</h1>
 </header>
@@ -71,7 +75,6 @@
             <th>객실이미지</th>
             <th>객실이름</th>
             <th>객실가격</th>
-            <th>객실갯수</th>
             <th>수정여부</th>
         </tr>
         <tr th:each="rlist : ${rlist}">
@@ -80,8 +83,7 @@
                 <td th:name="hotelHtId" th:text="${rlist.htName} + '호텔'"></td>
                 <td><img th:src="${rlist.rImg}" class="oriImg"></td>
                 <td th:name="rName" th:text="${rlist.rName}"></td>
-                <td th:name="rPrice" th:text="${rlist.rPrice}"></td>
-                <td th:name="rCnt" th:text="${rlist.rCnt}"></td>
+                <td th:name="rPrice" th:text="${rlist.rPrice}+'원'"></td>
                 <td>
                     <button type="submit" class="roomupdate">수정</button>
                     <button type="submit" class="roomdelete">삭제</button>
