0214 [modify] 상세조건 구현완료

--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -123,8 +123,8 @@
                 <div>
                     <input type="hidden" id="leftvalue" name="leftvalue">
                     <input type="hidden" id="rightvalue" name="rightvalue">
-                    <p class="left" id="left"></p>
-                    <p class="right" id="right"></p>
+                    <p class="left" id="left">0원</p>
+                    <p class="right" id="right">500,000원</p>
                 </div>
             </div>
             <button class="btn btn-outline-success" type="submit" id="hotelSearch" onclick="price()">검색</button>
