--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -109,8 +109,8 @@
                     <td  th:name="rCnt" th:text="${rlist.rCnt}"></td>
                     <td >
 
-                        <button type="submit" class="btn btn-secondary roomupdate">객실등록</button>
-                        <button type="submit" class="btn btn-secondary roomdelete">수정</button>
+                        <button type="submit" class="btn btn-secondary roomupdate">수정</button>
+                        <button type="submit" class="btn btn-secondary roomdelete">삭제</button>
                     </td>
                 </form>
             </tr>
