--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -38,7 +38,7 @@
             <link rel="stylesheet" href="/css/myPage.css">
             <link rel="stylesheet" href="/css/mainPage.css">
             <link rel="stylesheet" href="/css/hotelPage.css">
-            <link rel="stylesheet" href="/css/adminReg.css">
+<!--            <link rel="stylesheet" href="/css/adminReg.css">-->
             <link rel="stylesheet" href="/css/reservation.css">
             <link rel="stylesheet" href="/css/reserved.css">
             <link rel="stylesheet" href="/css/footer.css">
@@ -54,7 +54,7 @@
             <script src="/js/myPage.js" defer></script>
             <script src="/js/mainPage.js" defer></script>
             <script src="/js/hotelPage.js" defer></script>
-            <script src="/js/adminReg.js" defer></script>
+<!--            <script src="/js/adminReg.js" defer></script>-->
             <script src="/js/reservation.js" defer></script>
             <script src="/js/reserved.js" defer></script>
 
