--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 <header th:replace="fragments/header::headerFragment"></header>
 <div th:layout:fragment="content"></div>
 <footer th:replace="fragments/footer::footerFragment"></footer>
