0214 [modify] js 에러처리

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -83,7 +83,7 @@
                 <h3>이메일찾기</h3>
                 핸드폰<br><input type="text" placeholder="회원가입시 등록한 핸드폰 번호를 입력해주세요" id="inputPhone"><br>
                 인증번호<br><input type="text" placeholder="예)123456" id="authPhone">
-                <button th:text="전송" id="sendPhone"></button>
+                <button th:text="전송" id="sendPhone"></button><br>
                 <button class="modal_close_btn" th:text="취소"></button>
                 <button th:text="확인" id="applyPhoneAuth"></button>
             </div>
@@ -92,7 +92,7 @@
                 <h3>비밀번호찾기</h3>
                 이메일<br><input type="text" placeholder="회원가입시 등록한 이메일을 입력해주세요" id="inputEmail"><br>
                 인증번호<br><input type="text" placeholder="예)123456" id="authEmail">
-                <button th:text="전송" id="sendEmail"></button>
+                <button th:text="전송" id="sendEmail"></button><br>
                 <button class="modal_close_btn" th:text="취소"></button>
                 <button th:text="확인" id="applyEmailAuth"></button>
             </div>
