0214 [modify] 객실 페이지 슬릭 슬라이드 구현

--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -120,7 +120,7 @@
             <h1 th:text="${hotelDto.htName}"/>
             <h3 th:text="${hotelDto.htAddress}"/>
             <h3 th:text="${hotelDto.htPhone}"/>
-
+            <!--    리스트로 그림 받아오기        -->
             <section class="visual">
             <img th:src="${hotelDto.getHtImg()}" class="oriImg">
                 <img th:src="${hotelDto.getHtImg()}" class="oriImg">
