--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -8,6 +8,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    position : relative;
-    bottom: 0 ;
+    /*position : relative;*/
+    /*bottom: 0 ;*/
 }
