--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -79,8 +79,8 @@
                     <td th:if="${pricelist[i.index]} != null"><span th:text="${pricelist[i.index]}+'원'"></span></td>
                     <td th:if="${pricelist[i.index]} == null"><span th:text='0원'></span></td>
                     <td>
-                        <button type="submit" class="btn btn-secondary roomcreate">객실등록</button>
                         <button type="submit" class="btn btn-secondary hotelupdate">수정</button>
+                        <button type="submit" class="btn btn-success roomcreate">객실등록</button>
                     </td>
                 </form>
             </tr>
@@ -103,14 +103,14 @@
 <!--                    d-flex justify-content-center  item-align-center text-align-center-->
                     <input type="text" class="" hidden="hidden" name="rId" th:value="${rlist.rId}">
                     <td th:name="hotelHtId" th:text="${rlist.htName} + ' 호텔'"></td>
-                    <td><img th:src="${rlist.rImg}" width="500px" height="220px" class="oriImg mx-auto d-block" ></td>
+                    <td><img th:src="${rlist.rImg}" width="500px" height="220px" class="oriImg mx-auto d-block" style="border-radius: 10px" ></td>
                     <td  th:name="rName" th:text="${rlist.rName}"></td>
                     <td  th:name="rPrice" th:text="${rlist.rPrice}"></td>
                     <td  th:name="rCnt" th:text="${rlist.rCnt}"></td>
                     <td >
 
                         <button type="submit" class="btn btn-secondary roomupdate">수정</button>
-                        <button type="submit" class="btn btn-secondary roomdelete">삭제</button>
+                        <button type="submit" class="btn btn-danger roomdelete">삭제</button>
                     </td>
                 </form>
             </tr>
@@ -118,7 +118,7 @@
     </th:block>
 
     <script>
-        var formObj = $("form[role='form']");
+        let formObj = $("form[role='form']");
         $(".hotelupdate").click(function () {
             formObj.attr("action", "/hotel/updateView");
             formObj.attr("method", "post")
