--- a/src/main/resources/templates/adminReg.html
+++ b/src/main/resources/templates/adminReg.html
@@ -11,27 +11,34 @@
 </head>
 <body>
 <div class="container h-80 " layout:fragment="content">
-    <style>
-        .img {
-            width: 200px;
-            height: 200px;
-        }
-    </style>
-    <header>
-        <h1> ADMIN 게시판</h1>
-    </header>
 
-    <nav>
-        <ul>
-            <li><a href="/admin/hotellist">호텔 관리</a></li>
-            <li><a href="/admin/roomlist">객실 관리</a></li>
-            <li><a href="/hotel/reg">호텔 등록</a></li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary my-2 " >
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/admin/hotellist">관리자 홈</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/admin/hotellist">호텔 관리</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/roomlist">객실 관리</a>
+                    </li>
 
-        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/hotel/reg">호텔 등록</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
     </nav>
+
     <th:block th:if="${hotelDto == null}">
 
-        <span class="fw-bold display-6 ">호텔 등록</span>
         <div class="hotel_reg_wrap justify-content-center">
             <div class="hotel_reg">
 
@@ -43,25 +50,25 @@
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">호텔명</span>
                             <input type="text" class="form-control" id="htName" name="htName"
-                                   aria-describedby="inputGroup-sizing-default">
+                                   aria-describedby="inputGroup-sizing-default" required>
                         </div>
 
 
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">호텔 주소</span>
                             <input type="text" class="form-control" id="htAddress" name="htAddress"
-                                   aria-describedby="inputGroup-sizing-default">
+                                   aria-describedby="inputGroup-sizing-default" required>
                         </div>
 
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">호텔 연락처</span>
                             <input type="tel" class="form-control" id="htPhone" name="htPhone"
-                                   aria-describedby="inputGroup-sizing-default">
+                                   aria-describedby="inputGroup-sizing-default" required>
                         </div>
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text">호텔 이미지</span>
                             <input type="file" class="form-control" id="htImg" name="file"
-                                   aria-describedby="inputGroup-sizing-default">
+                                   aria-describedby="inputGroup-sizing-default" required>
                         </div>
                     </div>
 
@@ -133,19 +140,19 @@
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text">객실명</span>
                         <input type="text" class="form-control" name="rName"
-                               aria-describedby="inputGroup-sizing-default">
+                               aria-describedby="inputGroup-sizing-default" required>
                     </div>
 
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text">객실가격</span>
                         <input type="number" step="1000" class="form-control" name="rPrice"
-                               aria-describedby="inputGroup-sizing-default">
+                               aria-describedby="inputGroup-sizing-default" required>
                     </div>
 
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text">객실 이미지</span>
                         <input type="file" class="form-control" id="rImg" name="file"
-                               aria-describedby="inputGroup-sizing-default">
+                               aria-describedby="inputGroup-sizing-default" required>
                         <script>
                             $("#rImg").change(function () {
                                 if (this.files && this.files[0]) {
