--- a/src/main/resources/templates/adminupdateView.html
+++ b/src/main/resources/templates/adminupdateView.html
@@ -12,24 +12,85 @@
 <body>
 
 
-<div id="root "  layout:fragment="content">
-  <style>
-    .oriImg { width: 400px; height: 400px;  }
-  </style>
-  <header>
-    <h1> ADMIN 게시판</h1>
-  </header>
+<div class="container h-80 " layout:fragment="content">
 
-  <nav>
-    <ul>
-      <li><a href="/admin/hotellist">호텔 관리</a></li>
-      <li><a href="/admin/roomlist">객실 관리</a></li>
-      <li><a href="/hotel/reg">호텔 등록</a></li>
 
-    </ul>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary my-2 " >
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/admin/hotellist">관리자 홈</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/hotellist">호텔 관리</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/roomlist">객실 관리</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/hotel/reg">호텔 등록</a>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
   </nav>
 
-  <script type="text/javascript">
+  <th:block th:if="${roomupdate != null}">
+  <div class="hotel_reg_wrap justify-content-center">
+    <div class="hotel_reg">
+
+      <form method="post" action="/room/update" enctype="multipart/form-data">
+              <input type="hidden" name="rId" th:value="${roomupdate.rId}"/>
+        <div class="select_img w-100 "><img th:src="${roomupdate.rImg}" class="w-100 mb-2 p-1 rounded"/></div>
+        <div class="hotel_reg_input_group">
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text">객실이름</span>
+            <input type="text" class="form-control" name="rName" th:value="${roomupdate.rName}"
+                   aria-describedby="inputGroup-sizing-default" required>
+          </div>
+
+
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text">객실 가격</span>
+            <input type="number" class="form-control" name="rPrice" th:value="${roomupdate.rPrice}"
+                   aria-describedby="inputGroup-sizing-default" required>
+          </div>
+
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text">객실 이미지</span>
+            <input type="file" class="form-control" id="rImg" name="file"
+                   aria-describedby="inputGroup-sizing-default" required>
+          </div>
+        </div>
+
+        <script>
+          $("#rImg").change(function(){
+            if(this.files && this.files[0]) {
+              var reader = new FileReader;
+              reader.onload = function(data) {
+                $(".select_img img").attr("src", data.target.result).width(400);
+              }
+              reader.readAsDataURL(this.files[0]);
+            }
+          });
+        </script>
+
+        <div class="button_group w-100 h-10 text-end">
+            <button type="button" class="btn btn-secondary Rcancel_btn ">취소</button>
+            <button type="submit" class="btn btn-success update_btn ">등록</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  </th:block>
+
+
+        <script type="text/javascript">
     $(document).ready(function(){
 
       $(".Hcancel_btn").on("click", function(){
@@ -49,67 +110,132 @@
 
   </script>
 
+
   <th:block th:if="${hotelupdate != null}">
+    <div class="test1">
+
     <form name="updateForm" role="form" method="post" action="/hotel/update" enctype="multipart/form-data">
       <input type="hidden" name="htId" th:value="${hotelupdate.htId}"/>
-      <table>
-        <tbody>
-        <td>
-          <label>호텔명</label><input type="text" name="htName" th:value="${hotelupdate.htName}" /><br>
-          <label>호텔주소</label><input type="text" name="htAddress" th:value="${hotelupdate.htAddress}" /><br>
-          <label>호텔이미지</label><input type="file" id="htImg" name="file"/><br>
-          <div class="select_img"><img class="oriImg" th:src="${hotelupdate.htImg}" /></div>
-          <label>호텔 전화번호</label><input type="text" name="htPhone" th:value="${hotelupdate.htPhone}" /><br>
-          <script>
-            $("#htImg").change(function(){
-              if(this.files && this.files[0]) {
-                var reader = new FileReader;
-                reader.onload = function(data) {
-                  $(".select_img img").attr("src", data.target.result).width(400);
+
+      <div class="hotel_reg_wrap justify-content-center">
+        <div class="hotel_reg">
+
+            <div class="select_img  "><img th:src="${hotelupdate.htImg}" class="w-100 mb-2 p-1" style="border-radius: 15px"/></div>
+            <div class="hotel_reg_input_group">
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">호텔명</span>
+                <input type="text" class="form-control" name="htName" th:value="${hotelupdate.htName}"
+                       aria-describedby="inputGroup-sizing-default" required>
+              </div>
+
+
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">호텔주소</span>
+                <input type="text" class="form-control"  name="htAddress" th:value="${hotelupdate.htAddress}"
+                       aria-describedby="inputGroup-sizing-default" required>
+              </div>
+
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">호텔 연락처</span>
+                <input type="tel" class="form-control"  name="htPhone" th:value="${hotelupdate.htPhone}"
+                aria-describedby="inputGroup-sizing-default" required>
+              </div>
+
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">호텔 이미지</span>
+                <input type="file" class="form-control" id="htImg" name="file"
+                       aria-describedby="inputGroup-sizing-default" required>
+              </div>
+            </div>
+
+            <div class="button_group w-100 h-10 text-end">
+              <button type="button" class="btn btn-secondary Rcancel_btn ">취소</button>
+              <button type="submit" class="btn btn-success update_btn ">등록</button>
+            </div>
+            <script>
+              $("#htImg").change(function(){
+                if(this.files && this.files[0]) {
+                  let reader = new FileReader;
+                  reader.onload = function(data) {
+                    $(".select_img img").attr("src", data.target.result).width(400);
+                  }
+                  reader.readAsDataURL(this.files[0]);
                 }
-                reader.readAsDataURL(this.files[0]);
-              }
-            });
-          </script>
-        </td>
-        </tbody>
-      </table>
-      <div>
-        <button type="submit" >저장</button>
-        <button type="button" class="Hcancel_btn">취소</button>
+              });
+            </script>
+        </div>
       </div>
     </form>
-
+    </div>
   </th:block>
-  <th:block th:if="${roomupdate != null}">
-<!--  사진 객실이름 가격 체크인 시간 체크아웃 시간 -->
-    <form method="post" action="/room/update" enctype="multipart/form-data">
-      <input type="hidden" name="rId" th:value="${roomupdate.rId}"/>
-      <td>
-        <label>객실이름</label><input type="text" name="rName" th:value="${roomupdate.rName}" /><br>
-        <label>객실가격</label><input type="text" name="rPrice" th:value="${roomupdate.rPrice}" /><br>
-        <label>객실이미지</label><input type="file" id="rImg" name="file"/><br>
-        <div class="select_img"><img class="oriImg" th:src="${roomupdate.rImg}" /></div>
-        <script>
-          $("#rImg").change(function(){
-            if(this.files && this.files[0]) {
-              var reader = new FileReader;
-              reader.onload = function(data) {
-                $(".select_img img").attr("src", data.target.result).width(400);
-              }
-              reader.readAsDataURL(this.files[0]);
-            }
-          });
-        </script>
 
-      </td>
-      <div>
-        <button type="submit" class="update_btn">저장</button>
-        <button type="button" class="Rcancel_btn">취소</button>
-      </div>
-    </form>
-  </th:block>
 </div>
 </body>
+<!--            <table>-->
+<!--        <tbody>-->
+<!--        <td>-->
+<!--          <label>호텔명</label><input type="text" name="htName" th:value="${hotelupdate.htName}" /><br>-->
+<!--          <label>호텔주소</label><input type="text" name="htAddress" th:value="${hotelupdate.htAddress}" /><br>-->
+<!--          <label>호텔이미지</label><input type="file" id="htImg" name="file"/><br>-->
+<!--          <div class="select_img"><img class="oriImg" th:src="${hotelupdate.htImg}" /></div>-->
+<!--          <label>호텔 전화번호</label><input type="text" name="htPhone" th:value="${hotelupdate.htPhone}" /><br>-->
+
+
+
+
+<!--          <script>-->
+<!--            $("#htImg").change(function(){-->
+<!--              if(this.files && this.files[0]) {-->
+<!--                var reader = new FileReader;-->
+<!--                reader.onload = function(data) {-->
+<!--                  $(".select_img img").attr("src", data.target.result).width(400);-->
+<!--                }-->
+<!--                reader.readAsDataURL(this.files[0]);-->
+<!--              }-->
+<!--            });-->
+<!--          </script>-->
+<!--&lt;!&ndash;        </td>&ndash;&gt;-->
+<!--        </tbody>-->
+<!--      </table>-->
+<!--      <div>-->
+<!--        <button type="submit" >저장</button>-->
+<!--        <button type="button" class="Hcancel_btn">취소</button>-->
+<!--      </div>-->
+<!--    </form>-->
+<!--  </th:block>-->
+<!--</div>-->
+
+<!--  </th:block>-->
+<!--  <th:block th:if="${roomupdate != null}">-->
+<!--  사진 객실이름 가격 체크인 시간 체크아웃 시간 -->
+<!--    <form method="post" action="/room/update" enctype="multipart/form-data">-->
+<!--      <input type="hidden" name="rId" th:value="${roomupdate.rId}"/>-->
+<!--      <td>-->
+<!--        <label>객실이름</label><input type="text" name="rName" th:value="${roomupdate.rName}" /><br>-->
+<!--        <label>객실가격</label><input type="text" name="rPrice" th:value="${roomupdate.rPrice}" /><br>-->
+<!--        <label>객실이미지</label><input type="file" id="rImg" name="file"/><br>-->
+<!--        <div class="select_img"><img class="oriImg" th:src="${roomupdate.rImg}" /></div>-->
+<!--        <script>-->
+<!--          $("#rImg").change(function(){-->
+<!--            if(this.files && this.files[0]) {-->
+<!--              var reader = new FileReader;-->
+<!--              reader.onload = function(data) {-->
+<!--                $(".select_img img").attr("src", data.target.result).width(400);-->
+<!--              }-->
+<!--              reader.readAsDataURL(this.files[0]);-->
+<!--            }-->
+<!--          });-->
+<!--        </script>-->
+
+<!--      </td>-->
+<!--      <div>-->
+<!--        <button type="submit" class="update_btn">저장</button>-->
+<!--        <button type="button" class="Rcancel_btn">취소</button>-->
+<!--      </div>-->
+<!--    </form>-->
+<!--  </th:block>-->
+<!--</div>-->
+<!--</div>-->
+
 
 </html>
