0215 [add] 슬릭 이미지 등록 구현중

--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class=" mb-3 my-3">
-        <form class="d-flex" role="form" action="/hotel" method="post">
+        <form class="d-flex" role="form" action="/hotelsearch" method="get">
 
             <input class="form-control sm-5 me-2" type="search" placeholder="숙소명 검색" aria-label="Search" name="htName"><br>
 
