--- a/src/main/resources/templates/adminImageReg.html
+++ b/src/main/resources/templates/adminImageReg.html
@@ -11,22 +11,64 @@
 
 <body>
 <div class="container " layout:fragment="content" >
+<nav class="navbar navbar-expand-lg bg-body-tertiary my-2 " >
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/admin/hotellist">관리자 홈</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/admin/hotellist">호텔 관리</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/roomlist">객실 관리</a>
+                </li>
 
-        <input type="text" value="셀렉트박스 호텔">
-        <input type="text" value="셀렉트박스 객실">
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/image">사진 관리</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/hotel/reg">호텔 등록</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/image/reg">사진 등록</a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
+
+        <form action="/image/reg" method="post" enctype="multipart/form-data">
                             <label>호텔명</label>
 
-                            <select name="hotelHtId">
+                            <select name="roomHotelHtId">
                                 <tr th:each="list : ${list}">
                                 <option th:text="${list.htName}" th:value="${list.htId}"></option>
                                 </tr>
-                            </select>
+                           </select>
 
-        <label for="roomImg">이미지</label>
-        <input type="file" id="roomImg" name="file" />
+<!--                            <select name="roomRId">-->
+<!--                                <option value="1">스탠다드</option>-->
+<!--                                <option value="2">디럭스</option>-->
+<!--                            </select>-->
+
+    <select name="imgExplain">
+        <option value="메인사진">메인사진</option>
+        <option value="메인사진2">메인2사진</option>
+        <option value="비품사진">비품사진</option>
+        <option value="화장실사진">화장실사진</option>
+    </select>
+
+        <label for="img">이미지</label>
+        <input type="file" id="img" name="file" />
         <div class="select_img"><img src="" /></div>
         <script>
-            $("#roomImg").change(function () {
+            $("#img").change(function () {
                 if (this.files && this.files[0]) {
                     let reader = new FileReader;
                     reader.onload = function (data) {
@@ -37,6 +79,7 @@
             });
         </script>
         <button type="submit">등록</button>
+</form>
 </div>
 </body>
 </html>
